--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>batik-all</artifactId>
             <version>1.17</version>
         </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
 </project>
