--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>swingx</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.oxbow</groupId>
+            <artifactId>swingbits</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
 </project>
